[package]
name = "fluxpeer-node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fp-node"
path = "src/main.rs"

[dependencies]
fp-tun = { path = "../engine/net/fp-tun", features = ["async"] }
fp-crypto = { path = "../engine/crypto/fp-crypto" }
fp-crypto-noise = { path = "../engine/crypto/fp-crypto-noise" }
fp-disco = { path = "../engine/net/fp-disco" }
fp-path = { path = "../engine/net/fp-path" }
fp-transport-anytls = { path = "../engine/transport/fp-transport-anytls" }
fp-transport = { path = "../engine/transport/fp-transport" }
fp-transport-tcp-bond = { path = "../engine/transport/fp-transport-tcp-bond" }
fluxpeer-relay-server = { path = "../relay-server" }
fluxpeer-sdk = { path = "../sdk/rust" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal", "process"] }
futures = "0.3"
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"
base64 = "0.22"
getrandom = "0.2"
libc = "0.2"
socket2 = "0.6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
