[package]
name = "fluxpeer-relay-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "relay-server"
path = "src/main.rs"

[dependencies]
thiserror = { workspace = true }
parking_lot = "0.12"
tokio = { workspace = true, features = ["sync", "net", "rt-multi-thread", "macros", "io-util", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fp-transport-anytls = { path = "../engine/transport/fp-transport-anytls" }
fp-transport = { path = "../engine/transport/fp-transport" }
fp-transport-tcp-bond = { path = "../engine/transport/fp-transport-tcp-bond" }
fp-disco = { path = "../engine/net/fp-disco" }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "net", "rt-multi-thread", "macros", "io-util", "time"] }
