[package]
name = "fp-node-core"
version = "2.2.5"
edition = "2024"

[features]
debug_log = ["tokio/tracing"]

[dependencies]
fp-tun = { workspace = true, features = ["async"] }
fp-crypto = { workspace = true }
fp-transport = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }

rand_core = { workspace = true }
x25519-dalek = { workspace = true }

hex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

libc = { workspace = true }

futures = { workspace = true }
packet = "0.1"
ip_network = "0.4"
ip_network_table = "0.2"
tokio = { workspace = true, features = ["rt", "net", "sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
