[package]
name = "fp-node-server-sys"
version = "2.2.5"
edition = "2024"
# RETIRED (2026-06-25): the dispatcher "gateway server" (formerly `examples/mobilegw`)
# is superseded by mobile-as-node — the phone now runs the full node engine
# (fp-node-mobile-sys: magicsock+disco) and peers with a real `fluxpeer node`, not a
# dispatcher gateway. Crate kept for reference only; it has no production consumer.
# Mobile e2e is now scripts/e2e-android-node.sh (see docs/MOBILE-E2E.md).

[features]
debug_log = ["fp-node-core/debug_log"]

[dependencies]
fp-node-core = { workspace = true }
fp-crypto = { workspace = true }
fp-transport = { workspace = true }
fp-conhash = { workspace = true }
fp-tun = { workspace = true, features = ["async"] }

tracing = { workspace = true }
thiserror = { workspace = true }
flume = { version = "0.11", default-features = false, features = ["async"] }
core_affinity = "0.8"

rand_core = { workspace = true }
x25519-dalek = { workspace = true }

hex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "sync"] }
tokio-stream = { workspace = true }
